<?xml version="1.0" encoding="utf-8"?>
<ui version="4.0">
 <author>
    SPDX-FileCopyrightText: none
    SPDX-License-Identifier: GPL-3.0-or-later
  </author>
 <class>WdgTasksetDocker</class>
 <widget class="QWidget" name="WdgTasksetDocker">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item colspan="5" column="0" row="0">
    <widget class="QListView" name="tasksetView"/>
   </item>
   <item column="1" row="1">
    <spacer name="horizontalSpacer">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>199</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item column="2" row="1">
    <widget class="QPushButton" name="recordButton">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item column="4" row="1">
    <widget class="QPushButton" name="clearButton">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item column="3" row="1">
    <widget class="QPushButton" name="saveButton">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item column="0" row="1">
    <widget class="KisPopupButton" name="chooserButton"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>KisPopupButton</class>
   <extends>QWidget</extends>
   <header>KisPopupButton.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>